--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -55,7 +55,7 @@
             width: 12vw;
             height: 12vw;
             padding: 0;
-            margin: 1vw;
+            margin-right: 2vw;
             border: 0;
         }
 
@@ -70,12 +70,23 @@
             font-size: 4vw;
             height: 5vw;
             color: #000000;
+            white-space:nowrap;
+            overflow:hidden;
+            text-overflow:ellipsis;
         }
 
         #subtitle {
             font-size: 3vw;
             height: 5vw;
             color: #333333;
+            white-space:nowrap;
+            overflow:hidden;
+            text-overflow:ellipsis;
+        }
+
+        #space {
+            flex-grow: 1;
+            flex-basis: auto;
         }
 
         #description {
@@ -84,6 +95,9 @@
             font-size: 3vw;
             padding: 1vw 2vw 1vw 2vw;
             color: #666666;
+            white-space:nowrap;
+            overflow:hidden;
+            text-overflow:ellipsis;
         }
 
         #button {
@@ -92,7 +106,7 @@
             align-items: center;
             width: 24vw;
             height: 8vw;
-            margin: 1vw;
+            margin: 1vw 0 1vw 2vw;
             background: #3385FF;
             border-radius: 2vw;
             color: #FFFFFF;
@@ -150,13 +164,14 @@
             <div id="top_bar">
                 <img src="{{ .IconURL }}" id="icon" />
                 <div id="title_bar">
-                    <div id="title">{{ .Title }}</div>
-                    <div id="subtitle">{{ .Subtitle }}</div>
+                    <div id="title" title="{{ .Title }}">{{ .Title }}</div>
+                    <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
                 </div>
+                <div id="space"></div>
                 <div id="button">{{ .ButtonText }}</div>
             </div>
         </a>
-        <div id="description">{{ .Description }}</div>
+        <div id="description" title="{{ .Description }}">{{ .Description }}</div>
         <a href="{{ .TargetURL }}">
             <div id="images_box">
                 <img src="{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}" id="image1" />
@@ -255,6 +270,9 @@
             }
 
             if (image1.src.trim() == '') {
+                image1.style.display = 'none';
+                image2.style.display = 'none';
+                image3.style.display = 'none';
                 if (imageHeight > 0) {
                     images_box.style.display = 'none';
                 }
