--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -12,6 +12,12 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
 
+        * {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+
         html,
         body {
             display: flex;
