完善自适应模板

--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -33,11 +33,62 @@
             top: 0;
             left: 0;
         }
+
+        #bottom_bar {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            display: flex;
+            flex-wrap: nowrap;
+            align-items: center;
+            width: auto;
+            height: 2vw;
+            padding: 1vw;
+            background: #3385FF;
+            border-top: #ffffff solid 1px;
+            border-right: #ffffff solid 1px;
+            border-radius: 0 1.5vw 0 0;
+        }
+
+        #logo {
+            width: 2vw;
+            height: 2vw;
+            border: 0;
+        }
+
+        #ad_text {
+            font-size: 2vw;
+            color: #ffffff;
+        }
+
+        #advertiser_name {
+            font-size: 2vw;
+            color: #ffffff;
+            font-weight: bold;
+            padding-left: 2vw;
+        }
     </style>
 </head>
 
 <body>
     <a href="{{ .TargetURL }}"><img src="{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}" /></a>
+    <div id="bottom_bar">
+        <div id="ad_text">广告</div>
+        <img id="logo" src="{{ .LogoURL }}" />
+        <div id="advertiser_name">{{ .AdvertiserName }}</div>
+    </div>
+    <script type="text/javascript">
+        (function () {
+            var logo = document.getElementById('logo');
+            var advertiser_name = document.getElementById('advertiser_name');
+            if (logo.src.trim() == '') {
+                logo.style.display = 'none';
+            }
+            if (advertiser_name.innerHTML.trim() == '') {
+                advertiser_name.style.display = 'none';
+            }
+        })();
+    </script>
 </body>
 
 </html>
