针对 Android 5.1 优化模板

--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -81,7 +81,8 @@
         (function () {
             var logo = document.getElementById('logo');
             var advertiser_name = document.getElementById('advertiser_name');
-            if (logo.src.trim() == '') {
+            var logo_src = '{{ .LogoURL }}'.trim();
+            if (logo_src == '') {
                 logo.style.display = 'none';
             }
             if (advertiser_name.innerHTML.trim() == '') {
