--- a/templates/sdk-interstitial.html
+++ b/templates/sdk-interstitial.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-    <a href="{{ .TargetURL }}"><img src="{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}" id="image" /></a>
+    <a href="{{ .TargetURL }}"><img src="{{ .Image1 }}" id="image" /></a>
 
     <script type="text/javascript">
         function resize() {
