--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -197,13 +197,13 @@
         <div id="description" title="{{ .Description }}">{{ .Description }}</div>
         <a href="{{ .TargetURL }}">
             <div id="images_box">
-                <img src="{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}" id="image1" />
-                <img src="{{ if gt (len .Images) 1 }}{{ index .Images 1 }}{{ end }}" id="image2" />
-                <img src="{{ if gt (len .Images) 2 }}{{ index .Images 2 }}{{ end }}" id="image3" />
+                <img src="{{ .Image1 }}" id="image1" />
+                <img src="{{ .Image2 }}" id="image2" />
+                <img src="{{ .Image3 }}" id="image3" />
             </div>
         </a>
         <div id="video_box">
-            <video src="{{ .VideoURL }}" poster="{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}"
+            <video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
                 controlsList="nodownload" controls muted></video>
         </div>
         <div id="bottom_bar">
@@ -241,9 +241,9 @@
             var icon_src = '{{ .IconURL }}'.trim();
             var logo_src = '{{ .LogoURL }}'.trim();
             var video_src = '{{ .VideoURL }}'.trim();
-            var image1_src = '{{ if gt (len .Images) 0 }}{{ index .Images 0 }}{{ end }}'.trim();
-            var image2_src = '{{ if gt (len .Images) 1 }}{{ index .Images 1 }}{{ end }}'.trim();
-            var image3_src = '{{ if gt (len .Images) 2 }}{{ index .Images 2 }}{{ end }}'.trim();
+            var image1_src = '{{ .Image1 }}'.trim();
+            var image2_src = '{{ .Image2 }}'.trim();
+            var image3_src = '{{ .Image3 }}'.trim();
 
             if (video_src != '') {
                 images_box.style.display = 'none';
