--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -40,9 +40,7 @@
         }
 
         .title {
-            color: #000000;
             font-weight: bold;
-
         }
 
         .star {
@@ -69,6 +67,7 @@
             align-items: center;
             bottom: 0;
             background-color: #ffffff;
+            color: #000000;
         }
 
         #download_bar.portrait {
@@ -156,7 +155,8 @@
             width: 100%;
             height: auto;
             padding: 10% 15% 10% 15%;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #ffffff;
         }
 
         #native_end_card {
