--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -40,12 +40,13 @@
             padding-left: 2vw;
             padding-right: 2vw;
             margin: 0;
-            background-color: #FFFFFF;
+            background-color: #eeeeee;
         }
 
         #icon {
             width: auto;
             height: 90vh;
+            border-radius: 3vw;
             padding: 0;
             margin-right: 2vw;
             border: 0;
@@ -57,6 +58,7 @@
             flex-direction: column;
             justify-content: space-around;
             height: 100%;
+            text-shadow:1px 1px 1px #ffffff;
         }
 
         #title {
@@ -94,6 +96,7 @@
             border-radius: 2vw;
             color: #FFFFFF;
             font-size: 4vw;
+            text-shadow:1px 1px 1px #000000;
         }
 
         #images_bar {
