--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -66,8 +66,9 @@
             justify-content: space-around;
             align-items: center;
             bottom: 0;
-            background-color: #ffffff;
+            background-color: rgba(255, 255, 255, 0.8);
             color: #000000;
+            text-shadow:1px 1px 1px #ffffff;
         }
 
         #download_bar.portrait {
@@ -120,6 +121,7 @@
             align-items: center;
             background: #3385FF;
             color: #FFFFFF;
+            text-shadow:1px 1px 1px #000000;
         }
 
         #download_bar.portrait .download_button {
@@ -155,8 +157,9 @@
             width: 100%;
             height: auto;
             padding: 10% 15% 10% 15%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.7);
             color: #ffffff;
+            text-shadow:1px 1px 1px #000000;
         }
 
         #native_end_card {
