--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -22,8 +22,12 @@
         body {
             margin: 0;
             padding: 0;
+        }
+
+        #content {
             height: 100%;
             overflow: hidden;
+            position: relative;
         }
 
         a {
@@ -144,27 +148,29 @@
 </head>
 
 <body>
-    <a href="{{ .TargetURL }}">
-        <div id="banner_bar">
-            <img src="{{ .IconURL }}" id="icon" />
-            <div id="title_bar">
-                <div id="title" title="{{ .Title }}">{{ .Title }}</div>
-                <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
-                <div id="description" title="{{ .Description }}">{{ .Description }}</div>
+    <div id="content">
+        <a href="{{ .TargetURL }}">
+            <div id="banner_bar">
+                <img src="{{ .IconURL }}" id="icon" />
+                <div id="title_bar">
+                    <div id="title" title="{{ .Title }}">{{ .Title }}</div>
+                    <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
+                    <div id="description" title="{{ .Description }}">{{ .Description }}</div>
+                </div>
+                <div id="space"></div>
+                <div id="button">{{ .ButtonText }}</div>
             </div>
-            <div id="space"></div>
-            <div id="button">{{ .ButtonText }}</div>
+            <div id="images_bar">
+                <img src="{{ .Image1 }}" id="image1" />
+                <img src="{{ .Image2 }}" id="image2" />
+                <img src="{{ .Image3 }}" id="image3" />
+            </div>
+        </a>
+        <div id="bottom_bar">
+            <img id="logo" src="{{ .LogoURL }}" />
+            <div id="advertiser_name">{{ .AdvertiserName }}</div>
+            <div id="ad_text">广告</div>
         </div>
-        <div id="images_bar">
-            <img src="{{ .Image1 }}" id="image1" />
-            <img src="{{ .Image2 }}" id="image2" />
-            <img src="{{ .Image3 }}" id="image3" />
-        </div>
-    </a>
-    <div id="bottom_bar">
-        <img id="logo" src="{{ .LogoURL }}" />
-        <div id="advertiser_name">{{ .AdvertiserName }}</div>
-        <div id="ad_text">广告</div>
     </div>
     <script type="text/javascript">
         (function () {
