--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -31,6 +31,7 @@
         #content {
             height: 100%;
             overflow: hidden;
+            position: relative;
         }
 
         a {
