--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -40,7 +40,7 @@
             justify-content: space-between;
             align-items: center;
             width: 96vw;
-            height: 100vh;
+            min-height: 15.625vw;
             padding-left: 2vw;
             padding-right: 2vw;
             margin: 0;
@@ -48,8 +48,8 @@
         }
 
         #icon {
-            width: auto;
-            height: 90vh;
+            width: 12vw;
+            height: 12vw;
             border-radius: 3vw;
             padding: 0;
             margin-right: 2vw;
@@ -108,7 +108,7 @@
             justify-content: space-around;
             align-items: center;
             width: 100vw;
-            height: 100vh;
+            min-height: 15.625vw;
         }
 
         #bottom_bar {
