--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -25,6 +25,7 @@
             align-content: space-between;
             margin: 0;
             padding: 0;
+            background-color: transparent;
             color: #000000;
         }
 
