强制广告字样在最顶层

--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -126,6 +126,7 @@
             border-top: #ffffff solid 1px;
             border-left: #ffffff solid 1px;
             border-radius: 1.5vw 0 0 0;
+            z-index: 2147483647;
         }
 
         #logo {
