--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -22,6 +22,7 @@
         body {
             margin: 0;
             padding: 0;
+            width: 100%;
             height: 100%;
             overflow: hidden;
             background-color: #000000;
@@ -37,6 +38,7 @@
             padding: 0;
             margin: 0;
             background-color: #000000;
+            object-fit: cover;
         }
 
         .title {
@@ -57,6 +59,7 @@
         #video_box {
             width: 100%;
             height: 100%;
+            overflow: hidden;
         }
 
         #download_bar {
@@ -68,7 +71,7 @@
             bottom: 0;
             background-color: rgba(255, 255, 255, 0.8);
             color: #000000;
-            text-shadow:1px 1px 1px #ffffff;
+            text-shadow: 1px 1px 1px #ffffff;
         }
 
         #download_bar.portrait {
@@ -114,14 +117,14 @@
             flex-grow: 1;
             flex-basis: auto;
         }
-    
+
         .download_button {
             display: flex;
             justify-content: center;
             align-items: center;
             background: #3385FF;
             color: #FFFFFF;
-            text-shadow:1px 1px 1px #000000;
+            text-shadow: 1px 1px 1px #000000;
         }
 
         #download_bar.portrait .download_button {
@@ -159,7 +162,7 @@
             padding: 10% 15% 10% 15%;
             background-color: rgba(0, 0, 0, 0.7);
             color: #ffffff;
-            text-shadow:1px 1px 1px #000000;
+            text-shadow: 1px 1px 1px #000000;
         }
 
         #native_end_card {
@@ -372,7 +375,7 @@
 <body>
     <div id="video_card">
         <div id="video_box">
-            <video autoplay muted poster="{{ .Image1 }}"
+            <video autoplay muted poster="{{ .Image1 }}" x5-playsinline playsinline webkit-playsinline
                 src="{{ .VideoURL }}" />
         </div>
         <a class="download_url" href="{{ .TargetURL }}">
@@ -494,6 +497,7 @@
             var download_buttons = document.getElementsByClassName('download_button');
             video.addEventListener('ended', function () {
                 video_card.style.display = "none";
+                video_card.innerHTML = "";
                 if (html_end_card.innerHTML.trim() == "") {
                     html_end_card.style.display = "none";
                     native_end_card.style.display = "flex";
