--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -112,7 +112,7 @@
             min-height: 15.625vw;
         }
 
-        #bottom_bar {
+        /* #bottom_bar {
             position: absolute;
             bottom: 0;
             right: 0;
@@ -145,7 +145,7 @@
             color: #ffffff;
             font-weight: bold;
             padding-right: 2vw;
-        }
+        } */
     </style>
 </head>
 
@@ -168,11 +168,11 @@
                 <img src="{{ .Image3 }}" id="image3" />
             </div>
         </a>
-        <div id="bottom_bar">
+        <!-- <div id="bottom_bar">
             <img id="logo" src="{{ .LogoURL }}" />
             <div id="advertiser_name">{{ .AdvertiserName }}</div>
             <div id="ad_text">广告</div>
-        </div>
+        </div> -->
     </div>
     <script type="text/javascript">
         (function () {
@@ -189,11 +189,11 @@
             var image1 = document.getElementById('image1');
             var image2 = document.getElementById('image2');
             var image3 = document.getElementById('image3');
-            var logo = document.getElementById('logo');
-            var advertiser_name = document.getElementById('advertiser_name');
+            // var logo = document.getElementById('logo');
+            // var advertiser_name = document.getElementById('advertiser_name');
 
             var icon_src = '{{ .IconURL }}'.trim();
-            var logo_src = '{{ .LogoURL }}'.trim();
+            // var logo_src = '{{ .LogoURL }}'.trim();
             var video_src = '{{ .VideoURL }}'.trim();
             var image1_src = '{{ .Image1 }}'.trim();
             var image2_src = '{{ .Image2 }}'.trim();
@@ -257,12 +257,12 @@
                 image3.style.width = '33vw';
             }
 
-            if (logo_src == '') {
-                logo.style.display = 'none';
-            }
-            if (advertiser_name.innerHTML.trim() == '') {
-                advertiser_name.style.display = 'none';
-            }
+            // if (logo_src == '') {
+            //     logo.style.display = 'none';
+            // }
+            // if (advertiser_name.innerHTML.trim() == '') {
+            //     advertiser_name.style.display = 'none';
+            // }
         })();
     </script>
 </body>
