--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -30,7 +30,7 @@
         }
 
         #content {
-            height: 100%;
+            height: 100vh;
             overflow: hidden;
             position: relative;
         }
@@ -40,7 +40,7 @@
         }
 
         video {
-            width: 100%;
+            width: 100vw;
             height: auto;
             padding: 0;
             margin: 0;
