--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -30,8 +30,7 @@
         }
 
         #content {
-            height: 100vh;
-            overflow: hidden;
+            height: 100%;
             position: relative;
         }
 
@@ -40,7 +39,7 @@
         }
 
         video {
-            width: 100vw;
+            width: 100%;
             height: auto;
             padding: 0;
             margin: 0;
