--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -171,7 +171,7 @@
         </a>
         <div id="video_box">
             <video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
-                controlsList="nodownload" controls muted></video>
+                controlsList="nodownload" controls webkit-playsinline="true" playsinline="true"></video>
         </div>
     </div>
     <script type="text/javascript">
