--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -31,13 +31,13 @@
         }
 
         .portrait img {
-            width: 100vw;
+            max-width: 100vw;
             height: auto;
         }
 
         .landscape img {
             width: auto;
-            height: 100vh;
+            max-height: 100vh;
         }
     </style>
 </head>
