解决 iOS 8 上原生广告排版跟高版本显示效果不统一的问题。

--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -21,8 +21,11 @@
         html,
         body {
             display: flex;
+            display: -webkit-flex;
             flex-direction: column;
+            -webkit-flex-direction: column;
             align-content: space-between;
+            -webkit-align-content: space-between;
             margin: 0;
             padding: 0;
             background-color: transparent;
@@ -60,9 +63,13 @@
 
         #top_bar {
             display: flex;
+            display: -webkit-flex;
             flex-wrap: nowrap;
+            -webkit-flex-wrap: nowrap;
             justify-content: space-between;
+            -webkit-justify-content: space-between;
             align-items: center;
+            -webkit-align-items: center;
             width: 96vw;
             height: auto;
             padding: 1vw 2vw 1vw 2vw;
@@ -81,13 +88,18 @@
 
         #title_bar {
             display: flex;
+            display: -webkit-flex;
             flex-direction: column;
+            -webkit-flex-direction: column;
             justify-content: space-around;
+            -webkit-justify-content: space-around;
         }
 
         #title {
             display: flex;
+            display: -webkit-flex;
             align-items: center;
+            -webkit-align-items: center;
             font-weight: bold;
             font-size: 4vw;
             height: 6vw;
@@ -99,7 +111,9 @@
 
         #subtitle {
             display: flex;
+            display: -webkit-flex;
             align-items: center;
+            -webkit-align-items: center;
             font-size: 3vw;
             height: 6vw;
             color: #333333;
@@ -107,12 +121,16 @@
 
         #space {
             flex-grow: 1;
+            -webkit-flex-grow: 1;
             flex-basis: auto;
+            -webkit-flex-basis: auto;
         }
 
         #description {
             display: flex;
+            display: -webkit-flex;
             align-items: center;
+            -webkit-align-items: center;
             width: 96vw;
             height: 4vw;
             font-size: 3vw;
@@ -122,8 +140,11 @@
 
         #button {
             display: flex;
+            display: -webkit-flex;
             justify-content: center;
+            -webkit-justify-content: center;
             align-items: center;
+            -webkit-align-items: center;
             width: 24vw;
             height: 8vw;
             margin: 1vw 0 1vw 2vw;
@@ -135,8 +156,11 @@
 
         #images_box {
             display: flex;
+            display: -webkit-flex;
             justify-content: space-around;
+            -webkit-justify-content: space-around;
             align-items: center;
+            -webkit-align-items: center;
             width: 100vw;
             height: auto;
         }
