--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -37,9 +37,13 @@
 
         #banner_bar {
             display: flex;
+            display: -webkit-flex;
             flex-wrap: nowrap;
+            -webkit-flex-wrap: nowrap;
             justify-content: space-between;
+            -webkit-justify-content: space-between;
             align-items: center;
+            -webkit-align-items: center;
             width: 96vw;
             min-height: 15.625vw;
             padding-left: 2vw;
@@ -56,19 +60,25 @@
             margin-right: 2vw;
             border: 0;
             flex-shrink: 0;
+            -webkit-flex-shrink: 0;
         }
 
         #title_bar {
             display: flex;
+            display: -webkit-flex;
             flex-direction: column;
+            -webkit-flex-direction: column;
             justify-content: space-around;
+            -webkit-justify-content: space-around;
             height: 100%;
             text-shadow:1px 1px 1px #ffffff;
         }
 
         #title {
             display: flex;
+            display: -webkit-flex;
             align-items: center;
+            -webkit-align-items: center;
             font-weight: bold;
             font-size: 4vw;
             color: #333333;
@@ -80,20 +90,27 @@
         #subtitle,
         #description {
             display: flex;
+            display: -webkit-flex;
             align-items: center;
+            -webkit-align-items: center;
             font-size: 3vw;
             color: #666666;
         }
 
         #space {
             flex-grow: 1;
+            -webkit-flex-grow: 1;
             flex-basis: auto;
+            -webkit-flex-basis: auto;
         }
 
         #button {
             display: flex;
+            display: -webkit-flex;
             justify-content: center;
+            -webkit-justify-content: center;
             align-items: center;
+            -webkit-align-items: center;
             width: 24vw;
             height: 10vw;
             margin-left: 2vw;
@@ -106,8 +123,11 @@
 
         #images_bar {
             display: flex;
+            display: -webkit-flex;
             justify-content: space-around;
+            -webkit-justify-content: space-around;
             align-items: center;
+            -webkit-align-items: center;
             width: 100vw;
             min-height: 15.625vw;
         }
