解决 iOS 8 上开屏，插屏，激励视频广告排版跟高版本显示效果不统一的问题。

--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -26,8 +26,11 @@
             overflow: hidden;
             background-color: rgba(0, 0, 0, 0.2);
             display: flex;
+            display: -webkit-flex;
             justify-content: center;
+            -webkit-justify-content: center;
             align-items: center;
+            -webkit-align-items: center;
         }
 
         .portrait img {
