--- a/templates/sdk-interstitial.html
+++ b/templates/sdk-interstitial.html
@@ -26,8 +26,11 @@
             overflow: hidden;
             background-color: black;
             display: flex;
+            display: -webkit-flex;
             justify-content: center;
+            -webkit-justify-content: center;
             align-items: center;
+            -webkit-align-items: center;
         }
 
         .portrait img {
