--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -275,9 +275,13 @@
             width: 100%;
             height: 100%;
             display: flex;
+            display: -webkit-flex;
             flex-wrap: nowrap;
+            -webkit-flex-wrap: nowrap;
             justify-content: center;
+            -webkit-justify-content: center;
             align-items: center;
+            -webkit-align-items: center;
             line-height: 1.2em;
             color: #FFFFFF;
             background-color: rgba(0, 0, 0, 0.4);
@@ -391,7 +395,7 @@
 <body>
     <div id="video_card">
         <div id="video_box">
-            <video autoplay muted poster="{{ .Image1 }}" x5-playsinline playsinline webkit-playsinline
+            <video autoplay muted webkit-muted poster="{{ .Image1 }}" x5-playsinline playsinline webkit-playsinline
                 src="{{ .VideoURL }}" />
         </div>
         <a class="download_url" href="{{ .TargetURL }}">
@@ -517,21 +521,23 @@
                 if (html_end_card.innerHTML.trim() == "") {
                     html_end_card.style.display = "none";
                     native_end_card.style.display = "flex";
+                    native_end_card.style.display = "-webkit-flex";
                 } else {
                     html_end_card.style.display = "block";
                     native_end_card.style.display = "none";
                 }
                 end_card.style.display = "flex";
+                end_card.style.display = "-webkit-flex";
             });
             video.addEventListener('timeupdate', function () {
                 seconds.innerHTML = Math.floor(video.duration - video.currentTime) + 1;
                 var percent = (video.currentTime / video.duration) * 100;
                 if (percent <= 50) {
-                    right_circle.style.cssText = 'transform: rotate(' + (-135 + percent * 3.6) + 'deg)';
-                    left_circle.style.cssText = 'transform: rotate(-135deg)';
+                    right_circle.style.cssText = '-webkit-transform: rotate(' + (-135 + percent * 3.6) + 'deg)';
+                    left_circle.style.cssText = '-webkit-transform: rotate(-135deg)';
                 } else {
-                    right_circle.style.cssText = 'transform: rotate(45deg)';
-                    left_circle.style.cssText = 'transform: rotate(' + (-135 + (percent - 50) * 3.6) +
+                    right_circle.style.cssText = '-webkit-transform: rotate(45deg)';
+                    left_circle.style.cssText = '-webkit-transform: rotate(' + (-135 + (percent - 50) * 3.6) +
                         'deg)';
                 }
             });
@@ -555,7 +561,12 @@
                 volumechange();
             });
             close_button.addEventListener('click', function () {
-                window.close();
+                try {
+                    adtalos.dispatch('close', '');
+                }
+                catch(e) {
+                    window.close();
+                }
             });
         })();
     </script>
