增加容器，方便在合适的位置注入脚本

--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -46,8 +46,9 @@
 </head>
 
 <body>
-    <a href="{{ .TargetURL }}"><img src="{{ .Image1 }}" /></a>
-
+    <div id="content">
+        <a href="{{ .TargetURL }}"><img src="{{ .Image1 }}" /></a>
+    </div>
     <script type="text/javascript">
         function resize() {
             var width = adtalos.getWidth();
