--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -153,6 +153,8 @@
         #end_card {
             width: 100%;
             height: 100%;
+            display: flex;
+            display: -webkit-flex;
             justify-content: space-around;
             -webkit-justify-content: space-around;
             align-items: center;
