--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -23,8 +23,6 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden;
-            background-color: rgba(0, 0, 0, 0.2);
             display: flex;
             display: -webkit-flex;
             justify-content: center;
@@ -33,14 +31,26 @@
             -webkit-align-items: center;
         }
 
+        html {
+            background-color: rgba(0, 0, 0, 0.2);
+        }
+
+        body {
+            background-color: rgba(0, 0, 0, 0);
+        }
+
         .portrait img {
-            max-width: 100vw;
+            margin: 0;
+            padding: 0;
+            max-width: 80vw;
             height: auto;
         }
 
         .landscape img {
+            margin: 0;
+            padding: 0;
             width: auto;
-            max-height: 100vh;
+            max-height: 80vh;
         }
     </style>
 </head>
