--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -33,6 +33,8 @@
 
         a {
             text-decoration: none;
+            display: flex;
+            display: -webkit-flex;
         }
 
         #banner_bar {
@@ -135,25 +137,23 @@
 </head>
 
 <body>
-    <div id="content">
-        <a href="{{ .TargetURL }}">
-            <div id="banner_bar">
-                <img src="{{ .IconURL }}" id="icon" />
-                <div id="title_bar">
-                    <div id="title" title="{{ .Title }}">{{ .Title }}</div>
-                    <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
-                    <div id="description" title="{{ .Description }}">{{ .Description }}</div>
-                </div>
-                <div id="space"></div>
-                <div id="button">{{ .ButtonText }}</div>
+    <a href="{{ .TargetURL }}">
+        <div id="banner_bar">
+            <img src="{{ .IconURL }}" id="icon" />
+            <div id="title_bar">
+                <div id="title" title="{{ .Title }}">{{ .Title }}</div>
+                <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
+                <div id="description" title="{{ .Description }}">{{ .Description }}</div>
             </div>
-            <div id="images_bar">
-                <img src="{{ .Image1 }}" id="image1" />
-                <img src="{{ .Image2 }}" id="image2" />
-                <img src="{{ .Image3 }}" id="image3" />
-            </div>
-        </a>
-    </div>
+            <div id="space"></div>
+            <div id="button">{{ .ButtonText }}</div>
+        </div>
+        <div id="images_bar">
+            <img src="{{ .Image1 }}" id="image1" />
+            <img src="{{ .Image2 }}" id="image2" />
+            <img src="{{ .Image3 }}" id="image3" />
+        </div>
+    </a>
     <script type="text/javascript">
         (function () {
             var webViewWidth = adtalos.getWidth();
