--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -32,11 +32,17 @@
         }
 
         html {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: rgba(0, 0, 0, 0.4);
         }
 
         body {
             background-color: rgba(0, 0, 0, 0);
+        }
+
+        a {
+            text-decoration: none;
+            display: flex;
+            display: -webkit-flex;            
         }
 
         .portrait img {
