--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -39,6 +39,8 @@
 
         a {
             text-decoration: none;
+            display: flex;
+            display: -webkit-flex;            
         }
 
         video {
@@ -173,30 +175,28 @@
 </head>
 
 <body>
-    <div id="content">
-        <a href="{{ .TargetURL }}">
-            <div id="top_bar">
-                <img src="{{ .IconURL }}" id="icon" />
-                <div id="title_bar">
-                    <div id="title" title="{{ .Title }}">{{ .Title }}</div>
-                    <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
-                </div>
-                <div id="space"></div>
-                <div id="button">{{ .ButtonText }}</div>
+    <a href="{{ .TargetURL }}">
+        <div id="top_bar">
+            <img src="{{ .IconURL }}" id="icon" />
+            <div id="title_bar">
+                <div id="title" title="{{ .Title }}">{{ .Title }}</div>
+                <div id="subtitle" title="{{ .Subtitle }}">{{ .Subtitle }}</div>
             </div>
-        </a>
-        <div id="description" title="{{ .Description }}">{{ .Description }}</div>
-        <a href="{{ .TargetURL }}">
-            <div id="images_box">
-                <img src="{{ .Image1 }}" id="image1" />
-                <img src="{{ .Image2 }}" id="image2" />
-                <img src="{{ .Image3 }}" id="image3" />
-            </div>
-        </a>
-        <div id="video_box">
-            <video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
-                controlsList="nodownload" controls webkit-playsinline="true" playsinline="true"></video>
+            <div id="space"></div>
+            <div id="button">{{ .ButtonText }}</div>
         </div>
+    </a>
+    <div id="description" title="{{ .Description }}">{{ .Description }}</div>
+    <a href="{{ .TargetURL }}">
+        <div id="images_box">
+            <img src="{{ .Image1 }}" id="image1" />
+            <img src="{{ .Image2 }}" id="image2" />
+            <img src="{{ .Image3 }}" id="image3" />
+        </div>
+    </a>
+    <div id="video_box">
+        <video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
+            controlsList="nodownload" controls webkit-playsinline="true" playsinline="true"></video>
     </div>
     <script type="text/javascript">
         (function () {
