--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -30,6 +30,8 @@
 
         a {
             text-decoration: none;
+            display: flex;
+            display: -webkit-flex;            
         }
 
         video {
