--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -30,8 +30,6 @@
 
         a {
             text-decoration: none;
-            display: flex;
-            display: -webkit-flex;            
         }
 
         video {
@@ -174,7 +172,7 @@
             height: auto;
             padding: 10% 15% 10% 15%;
             background-color: rgba(0, 0, 0, 0.7);
-            color: #ffffff;
+            color: #ffffff !important;
             text-shadow: 1px 1px 1px #000000;
         }
 
